--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,10 @@ pyparsing==2.4.7
 pytest==6.2.4
 pytz==2021.1
 requests==2.25.1
+simpy==4.0.1
 snowballstemmer==2.1.0
 Sphinx==4.0.2
+sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
